# logserver

./: .gitignore  CMakeLists.txt
inc/: stream.h
src/: main.cpp  stream.cpp
